org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/failing/ShadowingTests_SameNamesImportAsFeature_Rdef.alf.xt
//* 
XPECT_SETUP org.omg.sysml.xpect.tests.testsuite.SysMLXtextTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
		File {from ="/src/DependencySamePackageName_A_Feature.alf"}
		File {from ="/src/DependencySamePackageName_B_Feature.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
				File {from ="/src/DependencySamePackageName_A_Feature.alf"}
				File {from ="/src/DependencySamePackageName_B_Feature.alf"}
			}
		}
	}
END_SETUP 
*/
//Both DepedencySamePackageName_A and DependencySamePackageName_B have the same package names "SamePackage"
//Current implemention import from the first src package(A).
//XPECT noErrors --> ""
package test{
	import SamePackage::container;
	feature something1 redefines container::A{}
	//* XPECT errors ---
	"Couldn't resolve reference to Feature 'container::B'." at "container::B"
	"The feature 'type' of 'org.omg.sysml.lang.sysml.impl.FeatureImpl@3c3a0032{file:/C:/install_dir/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/testsuite/a_ShadowingTests_SameNamesImportAsFeature_Rdef.alf.xt#//@ownedRelationship.2/@ownedRelatedElement.0}' with 0 values must have at least 1 values" at "something2 redefines container::B{}"
	--- */
	feature something2 redefines container::B{}
}
